<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editTextNameRegisterActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextApe1RegisterActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Ape2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editTextNameRegisterActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextApe2RegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/Curso"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNameRegisterActivity" />

    <EditText
        android:id="@+id/editTextCourseRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextApe2RegisterActivity" />

    <EditText
        android:id="@+id/editTextIDRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseRegisterActivity" />

    <EditText
        android:id="@+id/editTextEmailRegisterActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/Ape1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editTextApe1RegisterActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIDRegisterActivity" />

    <Button
        android:id="@+id/buttonAcceptRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="30dp"
        android:text="@string/Add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegisterActivity" />

    <Button
        android:id="@+id/buttonCancelRegisterActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginTop="30dp"
        android:text="@string/Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordRegisterActivity" />

</android.support.constraint.ConstraintLayout>