<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterRestaurantActivity">

    <EditText
        android:id="@+id/editTextRestaurantNameRegisterRestaurantActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRestaurantLocationRegisterRestaurantActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Location"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRestaurantNameRegisterRestaurantActivity" />

    <EditText
        android:id="@+id/editTextRestaurantHorarioRegisterRestaurantActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/Horario"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRestaurantLocationRegisterRestaurantActivity" />

    <Button
        android:id="@+id/buttonAcceptRegisterRestaurantActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="40dp"
        android:text="@string/Add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRestaurantHorarioRegisterRestaurantActivity" />

    <Button
        android:id="@+id/buttonCancelRegisterRestaurantActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="40dp"
        android:text="@string/Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonAcceptRegisterRestaurantActivity"
        app:layout_constraintTop_toBottomOf="@+id/editTextRestaurantHorarioRegisterRestaurantActivity" />
</android.support.constraint.ConstraintLayout>