<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/textViewUserNameEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserApe1EditActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Ape1"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editTextUserNameEditActivity"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserNameEditActivity" />

    <EditText
        android:id="@+id/editTextUserApe2EditActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Ape2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/editTextUserApe1EditActivity"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserNameEditActivity" />

    <EditText
        android:id="@+id/editTextUserNameEditActivity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserNameEditActivity" />

    <TextView
        android:id="@+id/textViewCourseEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserNameEditActivity" />

    <EditText
        android:id="@+id/editTextCourseEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Curso"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCourseEditActivity" />

    <TextView
        android:id="@+id/textViewPasswordEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseEditActivity" />

    <EditText
        android:id="@+id/editTextPasswordEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPasswordEditActivity" />

    <Button
        android:id="@+id/buttonCancelEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="144dp"
        android:layout_marginTop="104dp"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordEditActivity" />

    <Button
        android:id="@+id/buttonAcceptEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="104dp"
        android:text="@string/Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordEditActivity" />

    <TextView
        android:id="@+id/textViewEmailValorEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordEditActivity" />

    <TextView
        android:id="@+id/textViewIDValorEditActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmailValorEditActivity" />
</android.support.constraint.ConstraintLayout>